--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qualweb-website",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -28,6 +28,15 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@petkit/ngx-highlight": "^1.0.3",
     "@thisissoon/angular-inviewport": "^4.2.0",
+    "@types/lodash.clone": "^4.5.6",
+    "@types/lodash.includes": "^4.3.6",
+    "@types/lodash.keys": "^4.2.6",
+    "@types/lodash.orderby": "^4.6.6",
+    "@types/lodash.replace": "^4.1.6",
+    "@types/lodash.size": "^4.2.6",
+    "@types/lodash.split": "^4.4.6",
+    "@types/lodash.startswith": "^4.2.6",
+    "@types/lodash.values": "^4.3.6",
     "angular-fittext": "^2.1.1",
     "apollo-angular": "^1.6.0",
     "apollo-angular-link-http": "^1.8.0",
@@ -47,7 +56,15 @@
     "htmlparser-to-html": "0.0.6",
     "htmlparser2": "^3.10.1",
     "intersection-observer": "^0.5.1",
-    "lodash": "^4.17.15",
+    "lodash.clone": "^4.5.0",
+    "lodash.includes": "^4.3.0",
+    "lodash.keys": "^4.2.0",
+    "lodash.orderby": "^4.6.0",
+    "lodash.replace": "^4.1.4",
+    "lodash.size": "^4.2.0",
+    "lodash.split": "^4.4.2",
+    "lodash.startswith": "^4.2.1",
+    "lodash.values": "^4.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.29"
