--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@petkit/ngx-highlight": "^1.0.3",
+    "@smartcodelab/ngx-prettify": "0.0.6",
     "@thisissoon/angular-inviewport": "^4.2.0",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.includes": "^4.3.6",
@@ -51,11 +52,12 @@
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "hammerjs": "^2.0.8",
-    "highlight.js": "^9.15.9",
+    "highlight.js": "^9.16.2",
     "html-formatter": "^0.1.9",
     "htmlparser-to-html": "0.0.6",
     "htmlparser2": "^3.10.1",
     "intersection-observer": "^0.5.1",
+    "js-beautify": "^1.10.2",
     "lodash.clone": "^4.5.0",
     "lodash.includes": "^4.3.0",
     "lodash.keys": "^4.2.0",
@@ -65,6 +67,8 @@
     "lodash.split": "^4.4.2",
     "lodash.startswith": "^4.2.1",
     "lodash.values": "^4.3.0",
+    "ngx-highlightjs": "^3.0.3",
+    "pretty": "^2.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.29"
