--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --build-optimizer",
+    "build:prod": "ng build --prod --build-optimizer",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -27,49 +27,12 @@
     "@angular/service-worker": "^8.2.14",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "@petkit/ngx-highlight": "^1.0.3",
-    "@smartcodelab/ngx-prettify": "0.0.6",
-    "@thisissoon/angular-inviewport": "^4.2.0",
-    "@types/lodash.clone": "^4.5.6",
-    "@types/lodash.includes": "^4.3.6",
-    "@types/lodash.keys": "^4.2.6",
-    "@types/lodash.orderby": "^4.6.6",
-    "@types/lodash.replace": "^4.1.6",
-    "@types/lodash.size": "^4.2.6",
-    "@types/lodash.split": "^4.4.6",
-    "@types/lodash.startswith": "^4.2.6",
-    "@types/lodash.values": "^4.3.6",
     "angular-fittext": "^2.1.1",
-    "apollo-angular": "^1.6.0",
-    "apollo-angular-link-http": "^1.8.0",
-    "apollo-cache-inmemory": "^1.6.3",
-    "apollo-client": "^2.6.4",
-    "apollo-link": "^1.2.12",
-    "chroma-js": "^2.0.4",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.9",
-    "express": "^4.17.1",
-    "express-graphql": "^0.8.0",
-    "graphql": "^14.4.2",
-    "graphql-tag": "^2.10.1",
     "hammerjs": "^2.0.8",
-    "highlight.js": "^9.16.2",
-    "html-formatter": "^0.1.9",
-    "htmlparser-to-html": "0.0.6",
-    "htmlparser2": "^3.10.1",
-    "intersection-observer": "^0.5.1",
-    "js-beautify": "^1.10.2",
     "lodash.clone": "^4.5.0",
-    "lodash.includes": "^4.3.0",
-    "lodash.keys": "^4.2.0",
     "lodash.orderby": "^4.6.0",
-    "lodash.replace": "^4.1.4",
-    "lodash.size": "^4.2.0",
-    "lodash.split": "^4.4.2",
-    "lodash.startswith": "^4.2.1",
-    "lodash.values": "^4.3.0",
-    "ngx-highlightjs": "^3.0.3",
-    "pretty": "^2.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.8.29"
@@ -94,6 +57,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.4.1"
+    "typescript": "^3.5.3"
   }
 }
