--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,9 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "types": [
-      "lodash"
-    ]
+    "types": []
   },
   "exclude": [
     "test.ts",
