--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@angular/service-worker": "^8.2.14",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "angular-fittext": "^2.1.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.9",
     "hammerjs": "^2.0.8",
@@ -46,7 +45,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.2.0",
