--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build:prod": "ng build --prod --build-optimizer",
+    "build:stats": "ng build --prod --build-optimizer --stats-json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -17,6 +18,7 @@
     "@angular/common": "^9.0.7",
     "@angular/compiler": "^9.0.7",
     "@angular/core": "^9.0.7",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "^9.0.7",
     "@angular/material": "^9.1.3",
     "@angular/platform-browser": "^9.0.7",
@@ -25,10 +27,11 @@
     "@angular/service-worker": "^9.0.7",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.9",
     "lodash.clone": "^4.5.0",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.orderby": "^4.6.0",
+    "ngx-socket-io": "^3.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -38,10 +41,12 @@
     "@angular/cli": "^9.0.7",
     "@angular/compiler-cli": "^9.0.7",
     "@angular/language-service": "^9.0.7",
+    "@qualweb/types": "^0.3.22",
     "@schematics/angular": "^8.3.22",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@types/puppeteer": "^2.0.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
