removed bp, updated dependencies (angular 10)

--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,12 @@
               "src/styles.scss"
             ],
             "scripts": [
+            ],
+            "allowedCommonJsDependencies": [
+              "highlight.js",
+              "debug",
+              "socket.io-parser",
+              "socket.io-client"
             ]
           },
           "configurations": {
