--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,14 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["es2018", "dom"],
+    "paths": {
+      "@app/*": ["app/*"],
+      "@material": ["app/material/material.module"],
+      "@evaluation/*": ["app/evaluation/*"],
+      "@dialogs/*": ["app/dialogs/*"]
+    },
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
