--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "website",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --build-optimizer",
-    "build:prod": "ng build --prod --build-optimizer --base-href=\"/evaluator/\"",
-    "build:stats": "ng build --prod --build-optimizer --stats-json",
+    "build": "ng build --configuration production --build-optimizer",
+    "build:prod": "ng build --configuration production --build-optimizer --base-href=\"/evaluator/\"",
+    "build:stats": "ng build --configuration production --build-optimizer --stats-json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -14,54 +14,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.3",
-    "@angular/cdk": "^11.2.2",
-    "@angular/common": "~11.2.3",
-    "@angular/compiler": "~11.2.3",
-    "@angular/core": "~11.2.3",
-    "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.2.3",
-    "@angular/material": "^11.2.2",
-    "@angular/platform-browser": "~11.2.3",
-    "@angular/platform-browser-dynamic": "~11.2.3",
-    "@angular/router": "~11.2.3",
-    "@angular/service-worker": "~11.2.3",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
+    "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.2.0",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/flex-layout": "^13.0.0-beta.37",
+    "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.2.0",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/router": "~13.2.0",
+    "@angular/service-worker": "~13.2.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "highlight.js": "^10.6.0",
-    "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
-    "lodash.foreach": "^4.5.0",
     "lodash.orderby": "^4.6.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-highlightjs": "^4.1.3",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.5.2",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.2",
-    "@angular/cli": "~11.2.2",
-    "@angular/compiler-cli": "~11.2.3",
-    "@qualweb/types": "^0.4.55",
+    "@angular-devkit/build-angular": "~13.2.1",
+    "@angular/cli": "~13.2.1",
+    "@angular/compiler-cli": "~13.2.0",
+    "@qualweb/types": "^0.7.16",
     "@types/highlight.js": "^10.1.0",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "~3.6.11",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.foreach": "^4.5.6",
     "@types/lodash.orderby": "^4.6.6",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "@types/node": "^17.0.4",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^4.0.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "karma": "~6.3.13",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "tslint": "~6.1.3",
+    "typescript": "~4.5.5"
   }
 }
