--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v2
+    - name: Build & Test (Node.js v12.x)
+      uses: actions/setup-node@v2
+      with:
+        node-version: 12.x
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run build:prod --if-present
+    
     - uses: mr-smithers-excellent/docker-build-push@v5
       name: Update & Push Docker image
       with:
